[project]
name = "leetcode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "charliel11", email = "chialielin@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.3.3",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
